--- a/package.json
+++ b/package.json
@@ -1,19 +1,12 @@
 {
   "name": "js-masti",
   "version": "1.0.0",
-  "description": "basic testing masti",
-  "main": "test.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node test.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "basic",
-    "test",
-    "masti"
-  ],
-  "author": "Antrishh",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.21.2"
-  }
+  "description": ""
 }
